# dorf

./: .gdignore  .gitignore  EventBus.gd  EventBus.gd.uid  animated_sprite_2d.gd  animated_sprite_2d.gd.uid  bot.gd  bot.gd.uid  bot.tscn  export_presets.cfg  icon.svg.import  project.godot
addons/awaitable_http_request/: icon.png.import
api/: main.py  pyproject.toml
assets/images/: dorf.png.import  dorf_talking.png.import  dorf_thinking.png.import
client/: .gitignore  README.md  anything_prompt  bot.py  convert.sh  derfbot.py  kill  pyproject.toml  restart  startup  summarizer_prompt  test_prompt  watcher.sh  whisper_call.sh  whisper_server.sh  whisper_worker.py
client/bot/: adventure.py  audio_capture.py  bots.py  chroma.py  client.py  combo.py  commands.py  config.py  constants.py  db.py  emoji.py  faction.py  insulter.py  leveling.py  lms.py  log_config.py  macro.py  metrics.py  misc.py  news.py  poll.py  processing.py  quotes.py  redis_client.py  sdcog.py  search.py  statemanager.py  translate.py  utilities.py  voice_manager.py  whisper_worker.py
client/bot/daemon/: db.py  whisper_worker.py
client/bot/tools/: searxng_search.py
client/bot/workers/: audio_worker.py  mimic_audio_worker.py  playback_worker.py  process_response_worker.py  process_summarizer_worker.py  voice_queue_processor.py
client/daemon/: db.py  whisper_worker.py
client/workers/: mimic_audio_worker.py  playback_worker.py  process_response_worker.py  process_summarizer_worker.py  voice_queue_processor.py
prefab/: input_window.gd  input_window.gd.uid  panel.gd  text_input_window.tscn
src/: api.py  cli.py  pyproject.toml  tts.py
